# Compression

./: CMakeLists.txt  README.md  main.cpp
docs/: diagram.plantuml
include/: LZWCompression.h  huffmanCompression.h
include/algorithms/: LZWCompression.h  compressionAlgorithm.h  huffmanCompression.h  iAlgorithm.h
include/utility/: iFileHandler.h  iStringEncoder.h  iStringSerializer.h  integerToStringEncoder.h  integerToStringSerializer.h  unixFileHandler.h
src/: LZWCompression.cpp  compressionAlgorithm.cpp  huffmanCompression.cpp
src/algorithms/: LZWCompression.cpp  compressionAlgorithm.cpp  huffmanCompression.cpp
src/utility/: unixFileHandler.cpp
tests/: CMakeLists.txt  tests_LZW.cpp  tests_huffman.cpp  tests_serializer.cpp
